# RoboCupSoftware

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  2026-02-09-implement-the-following-plan.txt  90grados.py  FuncionesClases.py  GA.py  GUIA_CALIBRACION.md  MS.py  PRUEBAS.txt  README.md  TRABAJOS_FUTUROS.md  borrador.py  busqueda_ball.py  codeg.py  config.py  detectar.py  estructura.txt  game.py  init_logging.py  integrate_logging.py  interaccion.py  log_manager.py  main.py  make.py  make_img.py  poseEstimation.py  prueba.py  prueba2.py  prueba_tablero.py  pyproject.toml  requirements-dev.txt  requirements.txt  video_futbol.avi
LOG/: logging_config.json
MetodosDeBusqueda/: prueba2.py
arucoMarkers/: marco.py
basic_test/: test_aruco_dictionary_comparison.py  test_ball_detection_rate.py  test_marker_identification.py  test_perception.py  test_robot_detection_rate.py  test_robot_path_control.py
cositas/: trayectorias.drawio
examples/: README.md  test_ball_detection_rate.py  test_perception.py  test_robot_detection_rate.py  test_robot_path_control.py
firmware/: BUILD_FLAGS.md  README.md
other/: test_arduino_communication.py  test_behavior_commands.py  test_behavior_to_command.py  test_integration.py
paquetes/: AdministradorEstados.py  ControladorRobot.py  D_star_lite.py  MS_logicDifusse.py  RRT_dinamic.py  RRT_star_smart.py  env.py  rastreo_pelota.py  rastreo_robots.py  rrt.py  simulacion_base.py  tools.py
robot_soccer/: config.py  main.py  requirements.txt  test_boardgame.py.py
robots/: send_comand.py
scripts/: README.md  find_pwm_range.py  (+19 more)
(+212 files in other folders)
